syntax = "proto3";
package identities.transactions.unprovision;

message TransactionResponse {}